Trabalhando na geração do accessToken
