# internal/infra/webserver/handlers/user_handlers.go
@@ -24,6 +24,17 @@ func NewUserHandler(db database.UserInterface) *UserHandler {
 	}
 }
 
+// GetJWt godoc
+// @Summary      Get a user JWT
+// @Description  Get a user JWT
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        request  body      dto.GetJWTInput  true  "user credentials"
+// @Success      200 {object}  dto.GetJWTOutput
+// @Failure      404 {object}  Error
+// @Failure      500 {object}  Error
+// @Router       /users/generate-token [post]
 func (h *UserHandler) GetJWt(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	jwtExpiresIn := r.Context().Value("JwtExpiresIn").(int)
@@ -35,7 +46,9 @@ func (h *UserHandler) GetJWt(w http.ResponseWriter, r *http.Request) {
 	}
 	u, err := h.UserDB.FindByEmail(user.Email)
 	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
+		w.WriteHeader(http.StatusNotFound)
+		errorResponse := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(errorResponse)
 		return
 	}
 	if !u.ValidatePassword(user.Password) {
@@ -47,16 +60,10 @@ func (h *UserHandler) GetJWt(w http.ResponseWriter, r *http.Request) {
 		"sub": u.ID.String(),
 		"exp": time.Now().Add(time.Second * time.Duration(jwtExpiresIn)).Unix(),
 	})
-	accessToken := struct {
-		AccessToken string `json:"access_token"`
-	}{
-		AccessToken: tokenString,
-	}
-
+	accessToken := dto.GetJWTOutput{AccessToken: tokenString}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(accessToken)
-
 }
 
 // CreateUser godoc
